src/base/objects/Opportunity/fields/Total_Node_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Node_Value__c</fullName>
    <description>The total value of the nodes in this opportunity.</description>
    <label>Total Node Value</label>
    <summarizedField>BT_Product__c.Sub_Total__c</summarizedField>
    <summaryForeignKey>BT_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>