src/base/objects/Opportunity/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <description>The date an opportunity&apos;s trial will end.</description>
    <inlineHelpText>The date an opportunity&apos;s trial will end. Required to move an opportunity to the Trial stage.</inlineHelpText>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>