src/base/objects/Opportunity/fields/Trial_Extension__c.field-meta.xml
<CustomField>
    <fullName>Trial_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check TRUE if a trial extension was discussed.</description>
    <inlineHelpText>Check TRUE if a trial extension was discussed.</inlineHelpText>
    <label>Trial Extension?</label>
    <type>Checkbox</type>
</CustomField>