src/base/objects/Opportunity/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <description>The ideal date the customer would like to start their trial.</description>
    <inlineHelpText>The ideal date the customer would like to start their trial.</inlineHelpText>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>