src/base/objects/Opportunity/fields/Wallet_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Campaign_Type__c</fullName>
    <label>Wallet Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Wallet Quest</fullName>
            </value>
            <value>
                <fullName>Co-Marketing</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>