src/base/objects/Opportunity/fields/Wallet_OKR_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Wallet_OKR_Cohort__c</fullName>
    <label>Wallet OKR Cohort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>