src/base/objects/Opportunity/fields/Wallet_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Opportunity_Type__c</fullName>
    <label>Wallet Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coinbase Wallet Integration</fullName>
            </value>
            <value>
                <fullName>Wallet Campaign/Quest</fullName>
            </value>
            <value>
                <fullName>Dapp Discovery Browsers</fullName>
            </value>
            <value>
                <fullName>Dapp Marketplace Integration</fullName>
                <isActive>false</isActive>
                <label>Dapp Marketplace Integration</label>
            </value>
            <value>
                <fullName>DmP Qualification</fullName>
                <isActive>false</isActive>
                <label>DmP Qualification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>