src/base/objects/Opportunity/recordTypes/Algorand_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Algorand_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Algorand Sales Pipeline</description>
    <label>Algorand Pipeline</label>
</RecordType>