src/base/objects/Opportunity/recordTypes/Arbitrum_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Arbitrum_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Arbitrum Sales Pipeline</description>
    <label>Arbitrum Pipeline</label>
</RecordType>