src/base/objects/Opportunity/recordTypes/Avalanche_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Avalanche_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Avalanche Sales Pipeline</description>
    <label>Avalanche Pipeline</label>
</RecordType>