src/base/objects/Opportunity/recordTypes/BSC_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>BSC_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>BSC Sales Pipeline</description>
    <label>BSC Pipeline</label>
</RecordType>