src/base/objects/Opportunity/recordTypes/Cardano_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Cardano_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Cardano Sales Pipeline</description>
    <label>Cardano Pipeline</label>
</RecordType>