src/base/objects/Opportunity/recordTypes/Celo_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Celo_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Celo Sales Pipeline</description>
    <label>Celo Pipeline</label>
</RecordType>