src/base/objects/Opportunity/recordTypes/Cloud_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Cloud_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <label>Cloud Pipeline</label>
</RecordType>