src/base/objects/Opportunity/recordTypes/Coinbase_Pay.recordType-meta.xml
<RecordType>
    <fullName>Coinbase_Pay</fullName>
    <active>true</active>
    <businessProcess>Coinbase Pay</businessProcess>
    <label>Coinbase Pay</label>
</RecordType>