src/base/objects/Opportunity/recordTypes/Commerce.recordType-meta.xml
<RecordType>
    <fullName>Commerce</fullName>
    <active>true</active>
    <businessProcess>Opportunity Commerce Process</businessProcess>
    <description>This record type is used by the Software Sales team for clients interested in Coinbase Managed Commerce and Custody.</description>
    <label>Commerce</label>
</RecordType>