src/base/objects/Opportunity/recordTypes/Compound_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Compound_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Compound Sales Pipeline</description>
    <label>Compound Pipeline</label>
</RecordType>