src/base/objects/Opportunity/recordTypes/Cosmos_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Cosmos_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Cosmos Sales Pipeline</description>
    <label>Cosmos Pipeline</label>
</RecordType>