src/base/objects/Opportunity/recordTypes/Crypto_com_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Crypto_com_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Crypto.com chain sales pipeline</description>
    <label>Crypto.com Pipeline</label>
</RecordType>