src/base/objects/Opportunity/recordTypes/Decred_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Decred_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Decred sales pipeline</description>
    <label>Decred Pipeline</label>
</RecordType>