src/base/objects/Opportunity/recordTypes/Edgeware_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Edgeware_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Edgeware sales pipeline</description>
    <label>Edgeware Pipeline</label>
</RecordType>