src/base/objects/Opportunity/recordTypes/Eth2_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Eth2_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Eth2 Sales Pipeline</description>
    <label>Eth2 Pipeline</label>
</RecordType>