src/base/objects/Opportunity/recordTypes/Eth2_Retail.recordType-meta.xml
<RecordType>
    <fullName>Eth2_Retail</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Eth2 Retail sales pipeline.</description>
    <label>Eth2 Retail</label>
</RecordType>