src/base/objects/Opportunity/recordTypes/Evmos_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Evmos_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Evmos Sales Pipeline</description>
    <label>Evmos Pipeline</label>
</RecordType>