src/base/objects/Opportunity/recordTypes/Flow_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Flow_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Flow sales pipeline.</description>
    <label>Flow Pipeline</label>
</RecordType>