src/base/objects/Opportunity/recordTypes/General_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>General_Opportunity</fullName>
    <active>true</active>
    <businessProcess>General Sales</businessProcess>
    <label>General Opportunity</label>
</RecordType>