src/base/objects/Opportunity/recordTypes/Helium_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Helium_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Helium Sales Pipeline</description>
    <label>Helium Pipeline</label>
</RecordType>