src/base/objects/Opportunity/recordTypes/Karura_Acala_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Karura_Acala_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Karura/Acala Sales Pipeline</description>
    <label>Karura/Acala Pipeline</label>
</RecordType>