src/base/objects/Opportunity/recordTypes/Keep_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Keep_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Keep Sales Pipeline</description>
    <label>Keep Pipeline</label>
</RecordType>