src/base/objects/Opportunity/recordTypes/Kusama_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Kusama_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Kusama sales pipeline.</description>
    <label>Kusama Pipeline</label>
</RecordType>