src/base/objects/Opportunity/recordTypes/Libra_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Libra_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Libra sales pipeline.</description>
    <label>Libra Pipeline</label>
</RecordType>