src/base/objects/Opportunity/recordTypes/Livepeer_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Livepeer_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Livepeer sales pipeline</description>
    <label>Livepeer Pipeline</label>
</RecordType>