src/base/objects/Opportunity/recordTypes/Market_Data.recordType-meta.xml
<RecordType>
    <fullName>Market_Data</fullName>
    <active>true</active>
    <businessProcess>Opportunity Market Data Process</businessProcess>
    <label>Market Data</label>
</RecordType>