src/base/objects/Opportunity/recordTypes/Market_Data_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Market_Data_Renewal</fullName>
    <active>true</active>
    <businessProcess>Opportunity Market Data Renewal Process</businessProcess>
    <label>Market Data Renewal</label>
</RecordType>