src/base/objects/Opportunity/recordTypes/Mina_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Mina_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Mina Sales Pipeline</description>
    <label>Mina Pipeline</label>
</RecordType>