src/base/objects/Opportunity/recordTypes/Moonbeam_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Moonbeam_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Moonbeam Sales Pipeline</description>
    <label>Moonbeam Pipeline</label>
</RecordType>