src/base/objects/Opportunity/recordTypes/NEAR_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>NEAR_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>NEAR sales pipeline.</description>
    <label>NEAR Pipeline</label>
</RecordType>