src/base/objects/Opportunity/recordTypes/No_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>No_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Does not currently belong to a pipeline</description>
    <label>No Pipeline</label>
</RecordType>