src/base/objects/Opportunity/recordTypes/NuCypher_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>NuCypher_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>NuCypher Pipeline</description>
    <label>NuCypher Pipeline</label>
</RecordType>