src/base/objects/Opportunity/recordTypes/Oasis_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Oasis_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Oasis sales pipeline.</description>
    <label>Oasis Pipeline</label>
</RecordType>