src/base/objects/Opportunity/recordTypes/Ontology_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Ontology_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Ontology sales pipeline</description>
    <label>Ontology Pipeline</label>
</RecordType>