src/base/objects/Opportunity/recordTypes/Optimism_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Optimism_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Optimism Sales Pipeline</description>
    <label>Optimism Pipeline</label>
</RecordType>