src/base/objects/Opportunity/recordTypes/Osmosis_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Osmosis_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Osmosis Sales Pipeline</description>
    <label>Osmosis Pipeline</label>
</RecordType>