src/base/objects/Opportunity/recordTypes/Polkadot_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Polkadot_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Polkadot Pipeline</description>
    <label>Polkadot Pipeline</label>
</RecordType>