src/base/objects/Opportunity/recordTypes/Polygon_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Polygon_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Polygon Sales Pipeline</description>
    <label>Polygon Pipeline</label>
</RecordType>