src/base/objects/Opportunity/recordTypes/Provenance_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Provenance_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Provenance Sales Pipeline</description>
    <label>Provenance Pipeline</label>
</RecordType>