src/base/objects/Opportunity/recordTypes/QT_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>QT_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>QT Pipeline</description>
    <label>QT Pipeline</label>
</RecordType>