src/base/objects/Opportunity/recordTypes/Solana_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Solana_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Solana sales pipeline</description>
    <label>Solana Pipeline</label>
</RecordType>