src/base/objects/Opportunity/recordTypes/Terra_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Terra_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Terra sales pipeline.</description>
    <label>Terra Pipeline</label>
</RecordType>