src/base/objects/Opportunity/recordTypes/Tezos_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Tezos_Pipeline</fullName>
    <active>false</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Tezos Sales Pipeline</description>
    <label>Tezos Pipeline</label>
</RecordType>