src/base/objects/Opportunity/recordTypes/The_Graph_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>The_Graph_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>The Graph Sales Pipeline</description>
    <label>The Graph Pipeline</label>
</RecordType>