src/base/objects/Opportunity/recordTypes/Threshold_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Threshold_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Participation Sales Process</businessProcess>
    <description>Threshold Sales Pipeline</description>
    <label>Threshold Pipeline</label>
</RecordType>