src/base/objects/Opportunity/recordTypes/Wallet_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Wallet_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Wallet Process</businessProcess>
    <label>Wallet Opportunity</label>
</RecordType>