src/base/objects/Opportunity/validationRules/Closed_Lost_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Validation</fullName>
    <active>true</active>
    <description>Ensure a reason is set in order to move an Opportunity to &quot;Closed Lost&quot;</description>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Closed Lost&quot;),
  ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please specify a Loss Reason.</errorMessage>
</ValidationRule>