src/base/objects/Opportunity/validationRules/Debrief_Call_Scheduled_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Debrief_Call_Scheduled_Checked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(StageName)
    ),
    RecordType.DeveloperName == &apos;Wallet_Opportunity&apos;,
    ISPICKVAL(StageName,&apos;Closed Won&apos;),
    ISPICKVAL(Wallet_Opportunity_Type__c,&apos;Wallet Campaign/Quest&apos;),
    !Debrief_Call_Scheduled__c,
    !Already_Connected__c

)</errorConditionFormula>
    <errorMessage>Schedule a debrief Call Task Completion Required to Close Won this opportunity</errorMessage>
</ValidationRule>