src/base/objects/Opportunity/validationRules/OPP_001.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_001</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Market_Data_Renewal&quot;,
NOT(ISPICKVAL(Original_Opportunity__r.StageName,&quot;Closed Won&quot;)))</errorConditionFormula>
    <errorMessage>Original Opportunity is not Closed Won. Close the opportunity before saving this renewal opportunity. [OPP_001]</errorMessage>
</ValidationRule>