src/base/objects/Opportunity/validationRules/OPP_002.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_002</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(RecordType.DeveloperName = &quot;Market_Data&quot;,
RecordType.DeveloperName = &quot;Market_Data_Renewal&quot;),
ISPICKVAL(StageName,&quot;Closed Won&quot;),
OR(ISBLANK(License_Type__c),
ISBLANK(TEXT(Contract_Start_Date__c)),
ISBLANK(TEXT(Contract_End_Date__c)),
ISBLANK(Products__c)
)
)</errorConditionFormula>
    <errorMessage>Enter License Type, Contract Start Date, Contract End Date, and Products if opportunity stage is selected as Closed Won. [OPP_002]</errorMessage>
</ValidationRule>