src/base/objects/Opportunity/validationRules/Other_option_needed_to_edit_Other_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_option_needed_to_edit_Other_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Closed Won&quot;),
  INCLUDES(Product_Interest__c, &quot;Other (Unspecified)&quot;),
  ISBLANK(Other_Amount__c) || Other_Amount__c == 0
)</errorConditionFormula>
    <errorDisplayField>Other_Amount__c</errorDisplayField>
    <errorMessage>&quot;Other Amount&quot; is required only if &quot;Other (Unspecified)&quot; is selected from Product Interest</errorMessage>
</ValidationRule>