src/base/objects/Opportunity/validationRules/Specify_Blocked_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Blocked_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Blocked__c,
ISBLANK(TEXT(Blocked_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Blocked_Reason__c</errorDisplayField>
    <errorMessage>You must specify a Blocked Reason on any Blocked Opportunities</errorMessage>
</ValidationRule>