src/base/objects/Opportunity/validationRules/Success_Metric_Estimate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Success_Metric_Estimate_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName == &apos;Wallet_Opportunity&apos;,
NOT(ISBLANK( TEXT(Success_Metric__c) ) ),
ISBLANK( Success_Metric_Estimate__c )
)</errorConditionFormula>
    <errorMessage>Please enter Success Metric Estimate</errorMessage>
</ValidationRule>