src/base/objects/Opportunity/validationRules/Survey_Sent_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Survey_Sent_Checked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(StageName)
    ),
    OR(
        /* Wallet Opportunity */
        AND(
            RecordType.DeveloperName == &apos;Wallet_Opportunity&apos;,
            ISPICKVAL(Wallet_Opportunity_Type__c,&apos;Coinbase Wallet Integration&apos;)
        )
    ),
    ISPICKVAL(StageName,&apos;Closed Won&apos;),
    !Survey_Sent__c,
    !Already_Connected__c
)</errorConditionFormula>
    <errorMessage>Send Survey Task Completion Required to Close Won this opportunity</errorMessage>
</ValidationRule>